--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -194,6 +194,12 @@ footer {
         }
     }
 
+    section#projects {
+        > .content {
+            align-items: center;
+        }
+    }
+
     section#hero {
         display: none;
     }
